# news-collect-solution

./: .env.example  .gitignore  Dockerfile  Dockerfile.celery  docker-compose.yml  pyproject.toml  railway.json
.github/workflows/: claude.yml  collect_news.yml
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py
collector/: admin.py  engine.py  models.py  presets.py  tasks.py  urls.py  views.py
collector/migrations/: 0001_initial.py  0002_theme_status.py  0003_theme_rss_feeds.py  0004_article_is_favorite.py
config/: celery.py  email_backend.py  settings.py  urls.py  views.py
dashboard/: urls.py  views.py
notifications/: models.py  sender.py  urls.py  views.py
notifications/migrations/: 0001_initial.py
static/css/: theme.css
templates/: base.html  landing.html
templates/account/: login.html  signup.html
templates/dashboard/: favorites.html  index.html  plan_required.html  theme_detail.html  theme_form.html  theme_list.html
templates/notifications/: channel_form.html  channel_link.html  channel_list.html
