[project]
name = "news-collect-solution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "deep-translator>=1.11.4",
    "dj-database-url>=3.1.2",
    "django>=6.0.5",
    "django-allauth>=65.16.1",
    "django-celery-beat>=2.9.0",
    "feedparser>=6.0.12",
    "gunicorn>=26.0.0",
    "psycopg2-binary>=2.9.12",
    "python-dateutil>=2.9.0.post0",
    "python-decouple>=3.8",
    "pytz>=2026.2",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "whitenoise>=6.12.0",
]
